<resources>
    <string name="app_name">Android Apps</string>
    <string name="create_account">do not have an account? <font color="#5b39c6">sign up</font> </string>
    <string name="forgot_password"><u>forgot password?</u></string>
    <string name="account_created">Account created successfully</string>
    <string name="account_not_created">Account not created</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="logout_successful">Logout successful</string>
    <string name="app_name1">1</string>
    <string name="app_name2">2</string>
    <string name="app_name3">3</string>
    <string name="app_name4">4</string>
    <string name="app_name5">5</string>
    <string name="app_name6">6</string>
    <string name="app_name7">7</string>
    <string name="app_name8">8</string>
    <string name="app_name9">9</string>
    <string name="solve">Solve</string>
    <string name="clear">Clear</string>
    <string name="enter_note_tital">Enter Note Tital</string>
    <string name="enter_note">Enter Note</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="other_available_devices">Other Available Devices</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="enter_command_here">Enter command here</string>
    <string name="send_command">Send Command</string>
    <string name="select_device">Select Device</string>
    <string name="reconnect">Reconnect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="connecting_to">Connecting to: %1$s…</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="connected_to">Connected to: %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="data_received">Data received: %1$s</string>
    <string name="printer_device_not_found">Printer device not found!</string>
    <string name="no_devices_found">No devices found</string>
    <string name="no_paired_devices">No paired devices</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported</string>
    <string name="bluetooth_required">Bluetooth is required</string>
    <string name="bluetooth_permission_denied">Bluetooth permission denied!</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="no_device_selected">No device selected!</string>
    <string name="service_not_connected">Service is not connected yet!</string>
    <string name="scan">Scan</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="open_printer_activity">Open Printer Activity</string>
    <string name="big_text">Message: 🚀 Don\'t miss out on the latest updates and exclusive content from [Your App Name]!
        Stay connected and informed wherever you go. Tap to explore new features,
        discover valuable insights, and engage with our vibrant community. Download the app now and join the conversation!</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_about">Acerca de</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="sort_options_array">
        <item>@string/sort_by_placeholder</item>
        <item>@string/sort_name_az</item>
        <item>@string/sort_name_za</item>
        <item>@string/sort_date_newest</item>
        <item>@string/sort_date_oldest</item>
    </string-array>
    <string name="sort_by_placeholder">Sort by...</string>
    <string name="sort_name_az">Name (A-Z)</string>
    <string name="sort_name_za">Name (Z-A)</string>
    <string name="sort_date_newest">Date (Newest First)</string>
    <string name="sort_date_oldest">Date (Oldest First)</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n


        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n


        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n


        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n


        Phaselus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="btn_ac">AC</string>
    <string name="btn_del">DEL</string>
    <string name="btn_div">/</string>
    <string name="btn_multi">*</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_sub">-</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_add">+</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_equals">=</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="multithreading_activity">Multithreading Activity</string>
    <string name="firebase">Firebase</string>
    <string name="async_activity">Async Activity</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="calculator">Calculator</string>
    <string name="gassingNumbersplashtxt"> please  select a number of digits the numberr of digits that i keep in mind</string>
    <string name="guess_title">I have a number in mind</string>
    <string name="guesses_left">You have 10 guesses left</string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="your_guess_hint">Your guess</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="guesses_left_format">You have %d guesses left</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="guess_too_high">Your last guess %d was too high. Try a lower number.</string>
    <string name="guess_too_low">Your last guess %d was too low. Try a higher number.</string>
    <string name="game_title">Number Guessing Game</string>
    <string name="win_message">Congratulations! You won the game. My guess was %d. You found my number in %d attempts. Your guesses: %s. Would you like to play again?</string>
    <string name="lose_message">Sorry, you lost. You\'ve used all your guesses. My number was %d. Your guesses: %s. Would you like to play again?</string>
    <string name="play_again">Play Again</string>
    <string name="no">No</string>
    <string name="no_cities_found">No cities found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="cities">
        <item>New York</item>
        <item>Agadir</item>
        <item>Chicago</item>
        <item>Hamburg</item>
        <item>Buchholz InD</item>
        <item>Berlin</item>
    </string-array>
    <string name="dialog_title">This is a dialog fragment</string>
    <string name="dialog_name_hint">Name</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_enter_name">Enter Name</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="error_enter_name">Please enter a name</string>
    <string name="card_text">sometext</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
</resources>