<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.plracticalcoding.Tack_Note.UpdateActivity">
    <EditText
        android:id="@+id/texttitleupdate"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/enter_note_tital"
        android:text=""
        android:autofillHints=""
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/editTexttakenoteupdate"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:text=""
        android:gravity="start|top"
        android:hint="@string/enter_note"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttoncancelupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonsaveupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>